# argparse-rosetta-rs

examples/onlyargs-app/: Cargo.toml  app.rs
examples/onlyargs_derive-app/: Cargo.toml  app.rs
runs/: 2023-04-12-Gorgatron.json
