[package]
name = "onlyargs_derive-app"
description = "Example app for onlyargs_derive"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "onlyargs_derive-app"
path = "app.rs"

[dependencies]
onlyargs = { git = "https://github.com/parasyte/onlyargs.git", rev = "6abe5cd5474239846b3bc81d87bca6779e342d1e" }
onlyargs_derive = { git = "https://github.com/parasyte/onlyargs.git", rev = "6abe5cd5474239846b3bc81d87bca6779e342d1e" }
